--- a/index.html
+++ b/index.html
@@ -1,23 +1,20 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Piano Simulator</title>
 
-  <!-- styles -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,400;0,700;1,200;1,400&display=swap" rel="stylesheet">
+
   <link rel="stylesheet" href="./src/styles/reset.css">
   <link rel="stylesheet" href="./src/styles/main.css">
 
-  <!-- fonts -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,400;0,700;1,100;1,200;1,300;1,400&display=swap"
-    rel="stylesheet">
-</head>
 
+
+  <title>Piano Simulator</title>
+</head>
 <body>
   <div class="container">
     <header>
@@ -29,6 +26,7 @@
         <span>Teclas</span> <input type="checkbox" checked>
       </div>
     </header>
+
     <ul class="piano-keys">
       <li class="key white" data-key="a"><span>a</span></li>
       <li class="key black" data-key="w"><span>w</span></li>
@@ -50,7 +48,9 @@
     </ul>
   </div>
 
-  <script src="./src/scripts/engine.js" defer></script>
-</body>
 
+
+  <script src="./src/scripts/engine.js" defer></script>
+  
+</body>
 </html>
